examples/vllm-gemma/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vllm-policy
  namespace: kubeagents-system
spec:
  podSelector:
    matchLabels:
      app: gemma-server
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: node-local-dns
        - ipBlock:
            cidr: 169.254.20.10/32
    - ports:
        - port: 443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 100.64.0.0/10
    - ports:
        - port: 80
          protocol: TCP
      to:
        - ipBlock:
            cidr: 169.254.169.254/32
    - ports:
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gke-managed-otel

  ingress:
    - from:
        - podSelector: {}
      ports:
        - port: 8000
          protocol: TCP

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gke-gmp-system
      ports:
        - port: 8000
          protocol: TCP
